fixing some errors and webpack

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,6 +1,11 @@
-<h1 class='text-center'><%= @cocktails.name %></h1>
+<h1 class='text-center'>The cocktail is <%= @cocktail.name %></h1>
 <ul>
-<li> <%= @cocktails.name %> </li>
+<li> <%= @cocktail.name %> </li>
+    <% @cocktail.doses.each do |dose|%>
+    <%= dose.description %>
+    <%= dose.ingredient %>
+  <% end %>
 </ul>
 <br>
 <%= link_to 'Back', root_path %> |
+<%= link_to 'Add a dose', new_cocktail_dose_path(@cocktail) %>
