--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,6 +1,10 @@
 <h1>Submit a cocktail!</h1>
 
-<%= simple_form_for [ @cocktail ] do |f| %>
+<%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
   <%= f.submit "Submit cocktail", class: "btn btn-primary" %>
 <% end %>
+
+<br>
+
+<%= link_to 'Back', root_path %>
