finished the back end for mister cocktail

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,11 +1,15 @@
 <h1 class='text-center'>The cocktail is <%= @cocktail.name %></h1>
+
 <ul>
 <li> <%= @cocktail.name %> </li>
     <% @cocktail.doses.each do |dose|%>
     <%= dose.description %>
-    <%= dose.ingredient %>
+    <%= dose.ingredient.name %>
+    <%= link_to 'Delete', dose_path(dose), method: :delete, data: { confirm: 'Are you sure?' } %>
   <% end %>
 </ul>
+
 <br>
+
 <%= link_to 'Back', root_path %> |
 <%= link_to 'Add a dose', new_cocktail_dose_path(@cocktail) %>
