--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,13 +1,18 @@
-<h1>Amazing Cocktails! 🍸</h1>
+<div style="background-color: #fcf1f1" >
+  <div class="banner", style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1589771383100-9e0ea17554b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80)">
+    <div class = "container">
+      <h1>Cocktail Emporium🍸</h1>
+      <%= link_to 'Create my cocktail', new_cocktail_path, class: "btn btn-warning" %>
+    </div>
+</div>
 
-<ul>
-  <% @cocktails.each do |cocktail| %>
-    <li>
-      <%= link_to cocktail.name, cocktail_path(cocktail.id) %>
-    </li>
-  <% end %>
-</ul>
-
-<br>
-
-<%= link_to 'Create my cocktail', new_cocktail_path %>
+<div class="container my-5">
+  <div class="cards">
+    <% @cocktails.each do |cocktail| %>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/flagged/photo-1575451533010-a35916b8a8bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80)">
+      <%= link_to cocktail.name, cocktail_path(cocktail.id), class: 'link-to-text-color'%>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
