--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,15 +1,19 @@
-<h1 class='text-center'>The cocktail is <%= @cocktail.name %></h1>
+<div style="background-color: #fcf1f1">
+  <div><h1 class='text-center'><%= @cocktail.name %></h1></div>
 
-<ul>
-<li> <%= @cocktail.name %> </li>
-    <% @cocktail.doses.each do |dose|%>
-    <%= dose.description %>
-    <%= dose.ingredient.name %>
-    <%= link_to 'Delete', dose_path(dose), method: :delete, data: { confirm: 'Are you sure?' } %>
-  <% end %>
-</ul>
+  <div>
+    <ul>
+      <% @cocktail.doses.each do |dose|%>
+      <li style="list-style-type: none"><%= dose.description %>: <%= dose.ingredient.name %> </li>
+      <%= link_to 'Delete', dose_path(dose), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %>
+      <% end %>
+    </ul>
+</div>
 
 <br>
 
-<%= link_to 'Back', root_path %> |
-<%= link_to 'Add a dose', new_cocktail_dose_path(@cocktail) %>
+  <div>
+    <%= link_to 'Back', root_path, class: "btn btn-warning" %> | <%= link_to 'Add a dose', new_cocktail_dose_path(@cocktail),  class: "btn btn-warning" %>
+  </div>
+
+</div>
